--- a/_sass/_slick-theme.scss
+++ b/_sass/_slick-theme.scss
@@ -4,7 +4,7 @@
 
 $slick-font-path: "../fonts/" !default;
 $slick-font-family: "slick" !default;
-$slick-loader-path: "../images/" !default;
+$slick-loader-path: "../img/" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: RGBA(0,0,0,0.2) !default;
 $slick-dot-color-active: white;
